WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177417
Viewport fit is no longer experimental
https://bugs.webkit.org/show_bug.cgi?id=177417
Summary
Viewport fit is no longer experimental
Michael Catanzaro
Reported
2017-09-24 08:10:11 PDT
The viewport fit feature is no longer experimental and having it enabled by default is desirable, so it should no longer be in the experimental features list.
Attachments
Patch
(2.51 KB, patch)
2017-09-24 08:21 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-09-24 08:21:51 PDT
Created
attachment 321654
[details]
Patch
Darin Adler
Comment 2
2017-09-24 17:03:06 PDT
Comment on
attachment 321654
[details]
Patch I am rubber stamping this. Hope everyone agrees.
WebKit Commit Bot
Comment 3
2017-09-24 20:02:27 PDT
Comment on
attachment 321654
[details]
Patch Clearing flags on attachment: 321654 Committed
r222438
: <
http://trac.webkit.org/changeset/222438
>
WebKit Commit Bot
Comment 4
2017-09-24 20:02:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-09-27 12:17:36 PDT
<
rdar://problem/34692966
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug