Viewport fit is no longer experimental https://bugs.webkit.org/show_bug.cgi?id=177417

Reviewed by Darin Adler.

* Shared/WebPreferencesDefinitions.h:


Canonical link: https://commits.webkit.org/193733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222438 268f45cc-cd09-0410-ab3c-d52691b4dbfc